# SEM-VI

./: main.py  pyproject.toml
DL/: Lab-3.html  Lab-3.ipynb  Lab-4.html  Lab-4.ipynb  Lab-5.html  Lab-5.ipynb  Lab-6.html  Lab-6.ipynb  Lab-7.ipynb  Lab1.html  Lab1.ipynb  Lab2.html  Lab2.ipynb
DV/Classroom/: Class1.html  Class1.ipynb  output_data.json
DV/Lab/: Lab-5.ipynb  Lab-6.ipynb  Lab2.html  Lab2.ipynb  Lab3.ipynb  Lab4.html  Lab4.ipynb
